#machine generated

if(JCPP_OS MATCHES "windows")
	add_definitions("-DSTATIC_BUILD")
endif()

if(JCPP_OS MATCHES "windows")
	include_directories("include")
	include_directories("libawt/awt/image")
	include_directories("libawt/awt/image/cvutils")
	include_directories("libawt/awt/medialib")
	include_directories("libawt/java2d")
	include_directories("libawt/java2d/loops")
	include_directories("libawt/java2d/pipe")
	include_directories("common/awt")
	include_directories("common/awt/debug")
	include_directories("common/awt/systemscale")
	include_directories("common/font")
	include_directories("common/java2d/opengl")
	include_directories("common/java2d/opengl/J2D_GL")
	include_directories("libfontmanager")
	include_directories("libfreetype/include")
	include_directories("libharfbuzz")
	include_directories("libjavajpeg")
	include_directories("libjsound")
	include_directories("liblcms")
	include_directories("libmlib_image")
	include_directories("libsplashscreen")
	include_directories("libsplashscreen/giflib")
	include_directories("libsplashscreen/libpng")
	include_directories("libawt/java2d/d3d")
	include_directories("libawt/java2d/opengl")
	include_directories("libawt/java2d/windows")
	include_directories("libawt/windows")
endif()

add_subdirectory("common")
add_subdirectory("include")
add_subdirectory("libawt")
add_subdirectory("libfontmanager")
add_subdirectory("libfreetype")
add_subdirectory("libharfbuzz")
add_subdirectory("libjavajpeg")
add_subdirectory("libjawt")
add_subdirectory("libjsound")
add_subdirectory("liblcms")
add_subdirectory("libmlib_image")
add_subdirectory("libsplashscreen")

aux_source_directory("${CMAKE_CURRENT_SOURCE_DIR}" windows-native_SRCS)
file(GLOB windows-native_HEADERS *.h *.hpp)
source_group("Include" FILES ${windows-native_HEADERS}) 
list(LENGTH windows-native_SRCS windows-native_SRCS_LENGTH)
if(windows-native_SRCS_LENGTH)
	add_library(windows-native OBJECT "${windows-native_SRCS}" "${windows-native_HEADERS}")
	jcpp_enable_bigobj(windows-native)
endif()