#machine generated

add_subdirectory("color")
add_subdirectory("desktop")
add_subdirectory("dnd")
add_subdirectory("event")
add_subdirectory("font")
add_subdirectory("geom")
add_subdirectory("im")
add_subdirectory("image")
add_subdirectory("peer")
add_subdirectory("print")

aux_source_directory("${CMAKE_CURRENT_SOURCE_DIR}" windows-classes.java.awt_SRCS)
file(GLOB windows-classes.java.awt_HEADERS *.h *.hpp)
source_group("Include" FILES ${windows-classes.java.awt_HEADERS}) 
list(LENGTH windows-classes.java.awt_SRCS windows-classes.java.awt_SRCS_LENGTH)
if(windows-classes.java.awt_SRCS_LENGTH)
	add_library(windows-classes.java.awt OBJECT "${windows-classes.java.awt_SRCS}" "${windows-classes.java.awt_HEADERS}")
	jcpp_enable_bigobj(windows-classes.java.awt)
endif()